# VC-News-Agent

./: .gitignore  .ignore  .npmrc  CONTRIBUTORS.md  README.md  ai市场日报agent_prd_开发确认版.md  app.py  package-lock.json  package.json  requirements.txt  tauri-vue-python-gui-prd.md  启动AI投资情报Agent.bat  启动AI投资情报Agent.ps1
ai_agent/: __init__.py  api_v1.py  config.py  database.py  models.py  security.py  seed.py  services.py  utils.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.vue  main.ts  router.ts  styles.css
frontend/src/api/: client.ts
frontend/src/stores/: backend.ts
frontend/src/views/: ContentDetailView.vue  ContentView.vue  DashboardView.vue  FinancingView.vue  LlmView.vue  SettingsView.vue  SourcesView.vue  SummariesView.vue  SummaryDetailView.vue  TaxonomyView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_dashboard_date.py  test_financing_filter.py  test_proxy_settings.py  test_source_fetchers.py  test_weekly_crawl.py  test_weekly_financing_prompts.py
